--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,18 @@ target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+### Maven ###
+log/
+dependency-reduced-pom.xml
+release.properties
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release/backup/
+.buildnumber
+
+application.properties
 
 ### STS ###
 .apt_generated
